<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IsiForum</string>
    <string name="author">Author</string>
    <string name="name">name</string>
    <string name="add_message">Add a message</string>
    <string name="search">Search</string>
    <string name="random">Random</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_delete">Delete</string>
    <string name="title_activity_detail">Detail Message</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="author_not_found">Author not found</string>
    <string name="author_not_found_message">The searched author was not found.</string>
    <string name="data_loading_error">Data loading error</string>
    <string name="data_loading_error_message">Could not retrieve posts.</string>
    <string name="previous">Prev</string>
    <string name="next">Next</string>
    <string name="title_activity_create_post">Create Post</string>
    <string name="hello_world">Hello world!</string>
    <string name="send_post">Send</string>

</resources>
